apps/pkg-cache/resources/nix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nix-cache
spec:
  selector:
    app: nix-cache
  ports:
    - port: 8080
      targetPort: 8080
