apps/pkg-cache/resources/nix/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nix-cache
spec:
  virtualhost:
    fqdn: nix-cache.pkg.etsmtl.club
    tls:
      secretName: nix-cache-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      timeoutPolicy:
        response: 4h
        idle: 4h
      services:
        - name: nix-cache
          port: 8080
